package myorganism;
public enum Species {
    HULUWA,GRANDFATHER,MONSTER,SCORPION,SNAKE;
}
